# whitlist-scanner

./: .gitattributes  README.md  index.html  package-lock.json  package.json  run_scanner.bat  vite.config.js
src/: App.css  App.jsx  main.jsx  whitelistData.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: dialog.json
src-tauri/src/: lib.rs  main.rs  window.rs
src-tauri/src/whitelist/: export.rs  export_history.rs  export_whitelist.rs  import.rs  mod.rs  model.rs  open_path.rs  storage.rs
src-tauri/src/whitelist/export_history/: export_history_csv.rs  export_history_xlsx.rs  mod.rs
src-tauri/src/whitelist/export_whitelist/: export_whitelist_csv.rs  export_whitelist_xlsx.rs  mod.rs
src/components/: ExportActionButton.css  ExportActionButton.jsx  ExportFormatMenu.jsx  ExportHistory.jsx  HistoryExport.jsx  HistoryPanel.jsx  ResultPanel.jsx  ScanForm.jsx  ScanInput.jsx  ScanPanel.jsx  ScanResult.jsx  ToolBar.jsx  WhitelistExport.jsx  WhitelistImport.jsx  WhitelistPanel.jsx
src/components/ScanPanel/: Popover.css  ScanForm.jsx  ScanPanel.jsx  ScanResult.jsx
src/components/ScanPanel/ScanButton/: ScanSettings.jsx
src/components/SettingsButton/: SettingRow.jsx  SettingsButton.jsx  SettingsModal.jsx
src/context/: PreferencesContext.jsx  PreferencesProvider.jsx
src/hooks/: useDoubleClickConfirm.js  useExportAction.js  usePreferences.js  useScanHistory.js  useScanSound.js  useScanner.js  useWhitelist.js
src/utils/: normalize.js  time.js
