[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
tauri = { version = "2", features = ["dialog-all", "fs-read-dir", "fs-write-file", "fs-read-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
calamine = "0.22"   # Excel 支援：xls, xlsx
notify = "6"         # 檔案監控