[package]
name = "whitelist-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
csv = "1"
calamine = "0.24"

[build-dependencies]
tauri-build = { version = "2", features = [] }
